--- a/flower-store/assets/css/index.css
+++ b/flower-store/assets/css/index.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;500;700&display=swap");
 body {
-  background-image: url("/assets/img/bg.png");
+  background-image: url("../img/bg.png");
 }
 
 .block_header {
@@ -70,7 +70,7 @@ body {
 }
 
 .box_banner:nth-child(1) {
-  background-image: url("/assets/img/leaf_banner.png");
+  background-image: url("../img/leaf_banner.png");
   background-position: bottom left;
   background-repeat: no-repeat;
   background-size: 15%;
@@ -79,7 +79,7 @@ body {
 .box_small_banner {
   padding: 30px 45px 30px;
   position: relative;
-  background-image: url("/assets/img/leaf_topbanner.png");
+  background-image: url("../img/leaf_topbanner.png");
   background-position: top right;
   background-repeat: no-repeat;
   background-size: 15%;
@@ -266,7 +266,7 @@ body {
 
 .box_product_title {
   margin-bottom: 70px;
-  background-image: url("/assets/img/left_right.png"), url("/assets/img/left_left.png");
+  background-image: url("../img/left_right.png"), url("../img/left_left.png");
   background-position: bottom left, bottom right;
   background-repeat: no-repeat;
   background-size: 5%;
@@ -605,7 +605,7 @@ body {
   margin-top: 50px;
 }
 .box_blog:nth-child(odd) {
-  background-image: url("/assets/img/big_leaf.png");
+  background-image: url("../img/big_leaf.png");
   background-repeat: no-repeat;
   background-position: bottom right;
   background-size: 10%;
@@ -652,7 +652,7 @@ body {
   z-index: -1;
 }
 .box_blog:nth-child(even) {
-  background-image: url("/assets/img/big_leaf2.png");
+  background-image: url("../img/big_leaf2.png");
   background-repeat: no-repeat;
   background-position: bottom left;
   background-size: 10%;
@@ -907,15 +907,17 @@ body {
     justify-content: right;
   }
 }
-.follow_us .follow_us_title {
+
+.follow_us_title {
   margin-right: 10px;
 }
-.follow_us .follow_us_title .follow_us_text {
+.follow_us_title .follow_us_text {
   font-family: "Montserrat Alternates", sans-serif;
   font-size: 16px;
   color: #ffffff;
 }
-.follow_us .social_list .social_link {
+
+.social_list .social_link {
   color: #ffffff;
   border: 2px solid;
   border-radius: 10px;
